# SensorReadoutEditor

./: .gitmodules  CMakeLists.txt  README.md  qml.qrc
lib/: CMakeLists.txt
src/: AdbController.h  AdbInterface.h  AppSettings.h  Backend.h  EventListModel.h  UiModels.h  main.cpp
ui/: ConfigurationDialog.qml  DeviceWindow.qml  Helper.js  main.qml
ui/components/: Icon.qml  LayoutStretcher.qml  ListViewColumn.qml  ListViewColumnHeader.qml  SensorEvent.js  SensorEventDataEditor.qml  SensorEventEditDialog.qml  SensorTypeComboBox.qml
